service-lb-helloworld.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-koala
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb  # Use "nlb" for Network Load Balancer
spec:
  selector:
    app: koala
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
